hphp/test/slow/inout/bad-call-15.php.expectf
Fatal error: You cannot use this syntax with `inout`. in %s/bad-call-15.php on line 7
